import 'package:flutter/material.dart';

class OnboardingConstants {
  // Teks
  static const String teksLewati = 'Lewati';
  static const String teksTombolLanjut = 'Lanjut';
  static const String teksTombolMulai = 'Mulai Lapor';

  // Warna
  static const Color warnaBiruMuda = Color(0xFF618DFF);
  static const Color warnaDarkBlue = Color(0xFF0046FF);
...
